--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -1,4 +1,6 @@
 {
+  "english": "English (UK)",
+  "greek": "Greek (GR)",
   "login": "Login",
   "register": "Register",
   "projects": "Projects",
@@ -7,7 +9,7 @@
   "logOut": "Log Out",
   "signInWith": "Sign in with",
   "signIn": "Sign In",
-  "username": "Username", 
+  "username": "Username",
   "password": "Password",
   "signUpWith": "Sign up with",
   "signUp": "Sign up",
@@ -20,10 +22,25 @@
   "new": "New",
   "soon": "Soon",
   "harokopioUniversity": "Harokopio University",
+  "harokopioUniversityOfAthens": " Harokopio University of Athens",
   "gfoss": "GFOSS",
+  "back": "Back",
+  "submit": "Submit",
+  "projectName": "Project Name",
+  "description": "Description",
+  "editor": "Editor",
+  "monaco": "Monaco",
+  "blockly": "Blockly",
+  "github": "Github",
+  "aboutUs": "About us",
+  "tryNow": "Try Now",
+  "support": "Support",
+  "documentation": "Documentation",
+  "pages": "Pages",
+  "demos": "Demos",
   "menu": {
     "home": "Home",
-    "fossbotHome": "FOSSBot Home", 
+    "fossbotHome": "FOSSBot Home",
     "dashboard": "Dashboard",
     "monacoEditor": "Monaco Editor",
     "editors": "Editors",
@@ -42,19 +59,20 @@
     "subtitle": "What kind of project will you create today?",
     "type": "Type",
     "title": "Title",
-    "description": "Description"
+    "description": "Description",
+    "edit": "Edit",
+    "delete": "Delete",
+    "noProjectsFound": "No projects found"
   },
   "banner-content": {
     "foss": "FOSS",
     "bot": "Bot",
     "openTechnologies": "an open technologies robot for education.",
     "democratizeEducation": "Let's democratize robotics education! ",
-    "tryNow": "Try it now"
+    "tryItNow": "Try it now"
   },
   "c2a2": {
-    "description": "Let's start your journey with us, build your own application using blocks or native Python code.",
-    "login": "Login",
-    "register": "Register"
+    "description": "Let's start your journey with us, build your own application using blocks or native Python code."
   },
   "card-fossbot": {
     "fossbot": "FOSSBot is an open source and open design DIY robot that has been developed by Greek Free and Open Source Software (GFOSS) and Harokopio University of Athens (HUA) for educational purposes. The robot does not come alone, but comprises multiple software and system solutions that provide a holistic approach for STEM education at all educational levels."
@@ -155,5 +173,12 @@
   "welcome-home-page": {
     "welcome": "Welcome To FOSSBot Home Page",
     "manageProjects": " Here you can manage your projects!"
+  },
+  "simulator-int": {
+    "unsupported": "HTML5 canvas appears to be unsupported in the current browser.",
+    "tryAgain": "Please try updating or use a different browser."
+  },
+  "testimonial-title": {
+    "description": "Don’t just take our words for it, See what developers like you are saying"
   }
 }
