have simulator as a component on loading

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -72,7 +72,7 @@
         "authLogin": {
             "username": "Username",
             "password": "Password",
-            "rememberDevice": "Remeber this Device",
+            "rememberDevice": "Remember this Device",
             "forgotPassword": "Forgot Password?",
             "singIn": "Sign In"
         },
