greek translations part 1

--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -1,58 +1,58 @@
 {
   "english": "Αγγλικά (UK)",
   "greek": "Ελληνικά (GR)",
-  "login": "Login",
-  "register": "Register",
-  "projects": "Projects",
-  "edit": "Edit",
-  "delete": "Delete",
-  "logOut": "Log Out",
-  "signInWith": "Sign in with",
-  "signIn": "Sign In",
-  "username": "Username",
-  "password": "Password",
-  "signUpWith": "Sign up with",
-  "signUp": "Sign up",
-  "firstname": "Firstname",
-  "lastname": "Lastname",
-  "emailAddress": "Email Adddress",
+  "login": "Σύνδεση",
+  "register": "Εγγραφή",
+  "projects": "Προτζκετς",
+  "edit": "Επεξεργασία",
+  "delete": "Διαγραφή",
+  "logOut": "Αποσύνδεση",
+  "signInWith": "Σύνδεση με",
+  "signIn": "Σύνδεση",
+  "username": "Όνομα χρήστη",
+  "password": "Κωδικός",
+  "signUpWith": "Εγγραφή με",
+  "signUp": "Εγγραφή",
+  "firstname": "Όνομα",
+  "lastname": "Επίθετο",
+  "emailAddress": "Ηλ. Διεύθυνση",
   "foss": "FOSS",
   "bot": "Bot",
-  "platform": "Platform",
-  "new": "New",
-  "soon": "Soon",
-  "harokopioUniversity": "Harokopio University",
-  "harokopioUniversityOfAthens": " Harokopio University of Athens",
+  "platform": "Πλατφόρμα",
+  "new": "Νέο",
+  "soon": "Σύντομα",
+  "harokopioUniversity": "Χαροκόπειο Πανεπιστήμιο",
+  "harokopioUniversityOfAthens": "Χαροκόπειο Πανεπιστήμιο Αθηνών",
   "gfoss": "GFOSS",
-  "back": "Back",
-  "submit": "Submit",
-  "projectName": "Project Name",
-  "description": "Description",
+  "back": "Πίσω",
+  "submit": "Υποβολή",
+  "projectName": "Όνομα πρότζεκτ",
+  "description": "Περιγραφή",
   "editor": "Editor",
   "monaco": "Monaco",
   "blockly": "Blockly",
   "github": "Github",
-  "aboutUs": "About us",
-  "tryNow": "Try Now",
-  "support": "Support",
-  "documentation": "Documentation",
-  "pages": "Pages",
+  "aboutUs": "Σχετικά με εμάς",
+  "tryNow": "Δοκίμασε τώρα",
+  "support": "Υποστήριξη",
+  "documentation": "Τεκμηρίωση",
+  "pages": "Σελίδες",
   "demos": "Demos",
   "menu": {
     "home": "Home",
     "fossbotHome": "FOSSBot Home",
-    "dashboard": "Dashboard",
+    "dashboard": "Διαχειριστικό",
     "monacoEditor": "Monaco Editor",
     "editors": "Editors",
     "pythonBased": "Python based",
     "blocklyEditor": "Blockly Editor",
     "blocksBased": "Blocks based",
-    "kindergarten": "Kindergarten",
-    "simplyBlocks": "Simply Blocks",
-    "educationalMaterial": "Educational Material",
-    "elementary": "Elementary",
+    "kindergarten": "Νηπιαγωγείο",
+    "simplyBlocks": "Απλά Blocks",
+    "educationalMaterial": "Εκπαιδευτικό υλικό",
+    "elementary": "Δημοτικό",
     "fossbotRepository": "FOSSBot Repository",
-    "externalLinks": "External Links"
+    "externalLinks": "Εξωτερικοί Σύνδεσμοι"
   },
   "projects-card": {
     "card-title": "FOSSBot Projects",
