Blockly supports both Greek and English

--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -184,5 +184,50 @@
   },
   "testimonial-title": {
     "description": "Μην λαμβανετε υπόψιν μόνο την δική μας άποψη για αυτό. Δείτε τι λένε οι προγραμματιστές σαν και εσάς."
+  },
+  "blocklyBlocks": {
+    "forward": "προς τα εμπρός",
+    "reverse": "αντίστροφα",
+    "rigth": "δεξιά",
+    "left": "αριστερά",
+    "moveDistance": "Κινήσου για απόσταση",
+    "moveDistanceTooltip": "Μετακινείται προς την κατεύθυνση εισόδου (προεπιλογή == προς τα εμπρός) σε καθορισμένη - εισόδου απόσταση (cm). <br> Παράμετρος: dist: η απόσταση που θα μετακινηθεί (σε cm). κατεύθυνση: η κατεύθυνση προς την οποία θα μετακινηθεί.",
+    "justMove": "Απλή μετακίνηση",
+    "justMoveTooltip": "Κινείται προς τα εμπρός/πίσω <br> Παράμετρος: κατεύθυνση: η κατεύθυνση προς την οποία θα κατευθυνθεί.",
+    "stopMoving": "Σταμάτημα κίνησης",
+    "stopMovingTooltip": "Το ρομπότ σταματά την κίνηση",
+    "sleep": "Ύπνος",
+    "sleepTooltip": "Κοιμάται για ένα χρονικό διάστημα. <br> Παράμετρος: time_s: ο χρόνος (δευτερόλεπτα) ύπνου.",
+    "justRotate": "Απλή περιστροφή",
+    "justRotateTooltip": "Περιστρέφει το Fossbot προς την καθορισμένη κατεύθυνση id. <br> Παράμετρος: dir_id: το id κατεύθυνσης προς περιστροφή: <br> - αντιωρολογιακή: dir_id == 0 <br> - ωρολογιακή: dir_id == 1",
+    "rotate9Degrees": "Περιστροφή 90 μοιρών",
+    "rotate9DegreesTooltip": "Περιστρέφει το Fossbot 90 μοίρες προς την καθορισμένη κατεύθυνση id. <br> Παράμετρος: dir_id: το id κατεύθυνσης προς περιστροφή 90 μοιρών: <br> - αντιωρολογιακή: dir_id == 0 <br> - ωρολογιακή: dir_id == 1",
+    "playSound": "Αναπαραγωγή ήχου",
+    "playSoundTooltip": "Αναπαράγει το αρχείο mp3 που καθορίζεται από την είσοδο audio_path. <br> Παράμετρος: audio_path: το μονοπάτι προς το αρχείο mp3 που θα αναπαραχθεί.",
+    "distance": "Μετρητής απόστασης",
+    "distanceTooltip": "Επιστρέφει την απόσταση του πλησιέστερου εμποδίου σε cm.",
+    "floorSensor": "Αισθητήρας δαπέδου",
+    "floorSensorTooltip": "",
+    "leftSensor": "Αριστερός αισθητήρας",
+    "middleSensor": "Μεσαίος αισθητήρας",
+    "rightSensor": "Δεξίς αισθητήρας",
+    "getAcceleration": "Λήψη επιτάχυνσης",
+    "getAccelerationTooltip": "Λαμβάνει την επιτάχυνση του καθορισμένου άξονα. <br> Παράμετρος: άξονας: ο άξονας για τη λήψη της επιτάχυνσης. <br> Επιστρέφει: η επιτάχυνση του καθορισμένου άξονα.",
+    "getGyroscope": "Λήψη γυροσκόπιου",
+    "getGyroscopeTooltip": "Λαμβάνει το γυροσκόπιο του καθορισμένου άξονα. <br> Παράμετρος: άξονας: ο άξονας για τη λήψη του γυροσκοπίου. <br> Επιστρέφει: το γυροσκόπιο του καθορισμένου άξονα.",
+    "set": "Όρισε",
+    "color": "χρώμα",
+    "red": "'κόκκινο'",
+    "green": "'πράσινο'",
+    "blue": "'άσπρο'",
+    "violet": "'βιολετί'",
+    "cyan": "'κυανό'",
+    "yellow": "'κίτρινο'",
+    "closed": "'κλειστό'",
+    "setColorTooltip": "Ορίζει το χρώμα του led στο επιλεγμένο χρώμα. <br> Παράμετρος: χρώμα: το επιθυμητό χρώμα.",
+    "lighSensor": "Λάβετε τον αισθητήρα φωτός",
+    "lightSensorTooltip": "Επιστρέφει την ανάγνωση του αισθητήρα φωτός.",
+    "noiseDetection": "Λήψη ανίχνευσης θορύβου",
+    "noiseDetectionTooltip": "Επιστρέφει True μόνο εάν ανιχνευθεί θόρυβος."
   }
 }
