--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -16,6 +16,7 @@
   "firstname": "Όνομα",
   "lastname": "Επίθετο",
   "emailAddress": "Ηλ. Διεύθυνση",
+  "changeYourPassword": "Άλλαξε τον κωδικό",
   "resetYourPassword": "Επανέφερε τον κωδικό",
   "userProfile": "Προφίλ χρήστη",
   "foss": "FOSS",
