--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -11,6 +11,7 @@
   "signIn": "Sign In",
   "username": "Username",
   "password": "Password",
+  "passwordConfirmation": "Password confirmation",
   "signUpWith": "Sign up with",
   "signUp": "Sign up",
   "firstname": "Firstname",
@@ -30,6 +31,7 @@
   "back": "Back",
   "submit": "Submit",
   "update": "Update",
+  "cancel": "Cancel",
   "projectName": "Project Name",
   "description": "Description",
   "editor": "Editor",
@@ -240,6 +242,7 @@
   },
   "alertMessages": {
     "userDataUpdated": "User data updated successfully!",
-    "userDataUpdateError": "Error occured when updating user data!"
+    "userDataUpdateError": "Error occured when updating user data!",
+    "passwordConfirmationError": "The fields: password and password confirmation must be identical."
   }
 }
