--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -11,6 +11,7 @@
   "signIn": "Σύνδεση",
   "username": "Όνομα χρήστη",
   "password": "Κωδικός",
+  "passwordConfirmation": "Επιβεβαίωση κωδικού",
   "signUpWith": "Εγγραφή με",
   "signUp": "Εγγραφή",
   "firstname": "Όνομα",
@@ -30,6 +31,7 @@
   "back": "Πίσω",
   "submit": "Υποβολή",
   "update": "Update",
+  "cancel": "Ακύρωση",
   "projectName": "Όνομα πρότζεκτ",
   "description": "Περιγραφή",
   "editor": "Editor",
@@ -240,6 +242,7 @@
   },
   "alertMessages": {
     "userDataUpdated": "Τα δεδομένα του χρήστη ενημερώθηκαν με επιτυχία!",
-    "userDataUpdateError": "Προέκυψε κάποιο πρόβλημα κατά την ενημέρωση των δεδομένων του χρήστη!"
+    "userDataUpdateError": "Προέκυψε κάποιο πρόβλημα κατά την ενημέρωση των δεδομένων του χρήστη!",
+    "passwordConfirmationError": "Τα πεδία: κωδικός και επιβεβαίωση κωδικού πρέπει να είναι ίδια."
   }
 }
