--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -244,5 +244,10 @@
     "userDataUpdated": "User data updated successfully!",
     "userDataUpdateError": "Error occured when updating user data!",
     "passwordConfirmationError": "The fields: password and password confirmation must be identical."
+  },
+  "accountSettings": {
+    "blocklyProjects": "Blockly projects",
+    "monacoProjects": "Monaco projects",
+    "tutorials": "Tutorials"
   }
 }
