--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -243,7 +243,9 @@
   "alertMessages": {
     "userDataUpdated": "Τα δεδομένα του χρήστη ενημερώθηκαν με επιτυχία!",
     "userDataUpdateError": "Προέκυψε κάποιο πρόβλημα κατά την ενημέρωση των δεδομένων του χρήστη!",
-    "passwordConfirmationError": "Τα πεδία: κωδικός και επιβεβαίωση κωδικού πρέπει να είναι ίδια."
+    "passwordConfirmationError": "Τα πεδία: κωδικός και επιβεβαίωση κωδικού πρέπει να είναι ίδια.",
+    "userDataFetchError": "Σφάλμα κατά την ανάκτηση δεδομένων χρήστη.",
+    "projectsFetchError": "Σφάλμα κατά την ανάκτηση πρότζεκτς."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly πρότζεκτς",
